# suika2-android

./: README.md
android/: .gitignore  prepare-libs.sh
android/app/: .gitignore  CMakeLists.txt  build.gradle
android/app/src/androidTest/java/jp/luxion/suika/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/jp/luxion/suika/: MainActivity.java
android/app/src/main/res/values/: strings.xml
android/app/src/test/java/jp/luxion/suika/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
